// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog base demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    基础确认对话框
  </button>
   
  <div
    class="t-dialog-ctx v-transfer-dom"
    style="z-index: 2500; display: none;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            取消
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            确认
          </button>
        </div>
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          name="close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Dialog others demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    非模态可拖拽
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    挂载在body
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    挂载特定元素
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    挂载函数返回节点
  </button>
   
  <div
    class="t-dialog-ctx v-transfer-dom"
    style="z-index: 2500; display: none;"
  >
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            取消
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            确认
          </button>
        </div>
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          name="close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`Dialog plugin demo works fine 1`] = `
<div>
  <p>
    插件调用方式一：this.$dialog(options)
  </p>
   
  <p>
    插件调用方式二：this.$dialog.confirm(options)
  </p>
   
  <p>
    插件调用方式三：this.$dialog.alert(options)
  </p>
  <br />
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    dialog
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    handleDialogNode
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    confirm
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    alert
  </button>
</div>
`;

exports[`Dialog position demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    默认位置
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    垂直居中
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    自定义偏移量
  </button>
   
  <div
    class="t-dialog-ctx v-transfer-dom"
    style="z-index: 2500; display: none;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            取消
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            确认
          </button>
        </div>
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          name="close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-dialog-ctx v-transfer-dom"
    style="z-index: 2500; display: none;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--center"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          水平居中显示的对话框
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            取消
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            确认
          </button>
        </div>
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          name="close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-dialog-ctx v-transfer-dom"
    style="z-index: 2500; display: none;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
      style="transform: translate(calc(-50% - 20px + 100%),calc(0px - 200px)); transform-origin: calc(-25% - 20px + 100%) calc(-25% - 200px);"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          自定义偏移量的对话框
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-outline t-button--theme-default"
            type="button"
          >
            取消
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default"
            type="button"
          >
            确认
          </button>
        </div>
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          name="close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
